added Test logging on console